--- a/frontend/canvas/6.html
+++ b/frontend/canvas/6.html
@@ -10,7 +10,7 @@
         height: 600px;
         display: block;
         margin: 50px auto;
-        border: 1px solid #aaa;
+        border: 1px solid #e8e8e8;
       }
     </style>
   </head>
@@ -56,6 +56,8 @@
       context.beginPath();
       context.moveTo(100, 0);
       context.lineTo(100, 600);
+      context.moveTo(400, 0);
+      context.lineTo(400, 600);
       context.moveTo(700, 0);
       context.lineTo(700, 600);
       context.stroke();
