--- a/frontend/snippets/click.html
+++ b/frontend/snippets/click.html
@@ -55,13 +55,13 @@
         }
       });
       function countTime(second) {
-        pageTimer['timer1'] = setInterval(function () {
-          if (!status) {
-            // callback();
-            console.log(`${second}s没有点击`);
-            status = true;
-          }
-        }, 1);
+        // pageTimer['timer1'] = setInterval(function () {
+        //   if (!status) {
+        //     // callback();
+        //     console.log(`${second}s没有点击`);
+        //     status = true;
+        //   }
+        // }, 1);
         if (pageTimer['timer2']) {
           clearInterval(pageTimer['timer2']);
         }
