--- a/frontend/d3js/index.html
+++ b/frontend/d3js/index.html
@@ -20,7 +20,7 @@
   <body>
     <div id="app"></div>
   </body>
-  <script src="http://res2.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
+  <script src="https://res2.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="./main.js"></script>
 </html>
