:tada: 添加 d3 演示

--- a/frontend/d3js/data.html
+++ b/frontend/d3js/data.html
@@ -32,14 +32,8 @@
     </style>
   </head>
   <body>
-    <div id="app">
-      <div class="seeTree-page">
-        <div id="treeRoot"></div>
-      </div>
-    </div>
+    <div id="app"></div>
   </body>
   <script src="https://res2.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
-  <script src="https://unpkg.com/vue@3.2.36/dist/vue.global.prod.js"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="./main.js"></script>
 </html>
